--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="stylesheet.css">
   <script src="../研究会課題/jquery-3.5.1.min.js"></script>
   <script src="script.js"></script>
+  <script src="js/circletype.min.js"></script>
   <a href=”https://aasa_stu_stady”></a>
 </head>
 
